--- a/assets/styles/pages/Services.module.scss
+++ b/assets/styles/pages/Services.module.scss
@@ -197,6 +197,13 @@
   margin-top: 100px;
   max-width: calc(100 / 1920 * 1200%);
 
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   @include xl {
     max-width: none;
   }
@@ -293,6 +300,13 @@
   margin: auto;
   margin-top: 100px;
   width: calc(100 / 1920 * 1200%);
+
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   @include xl {
     display: block;
